Fix top section from being cut off completely

--- a/styles.less
+++ b/styles.less
@@ -33,12 +33,13 @@ body {
 		width: 65%;
 		background-color: white;
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
 		z-index: 101;
 		font-family: 'Roboto', sans-serif;
-		margin: 50px 0;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		margin: 0 auto;
 
 		#close-btn {
 			p {
@@ -183,11 +184,12 @@ body {
 			transform: translateX(50%);
 		}
 		#bottom-cube {
-			position: absolute;
-			top: 96.5%;
-			right: 50%;
+			position: relative;
+			right: 55px;
+			bottom: -110px;
 			width: 90px;
 			height: 50px;
+			margin: 0 auto;
 			border: 8px solid #f5f5f5;
 			transform: translateX(50%);
 		}
